@@ -117,8 +117,8 @@ Kyle Isom <coder@kyleisom.net>
         elvi: cablesearch, duckduckgo, openports, wolfram
 	plus fixes.
 
-Jason Ryan <jasonwryan@gmail.com>
-        elvi: archwiki, deli, stack, pin
+Jason Ryan <jasonwryan@surfraw.org>
+        elvi: archwiki, deli, github, stack, pin
 
 Sara Fauzia <sara@archlinux.us>
         archpkg fix.
