@@ -51,6 +51,7 @@ elvi.1sr.gz @mandir@/man1/fsfdir.1sr.gz
 elvi.1sr.gz @mandir@/man1/gcache.1sr.gz
 elvi.1sr.gz @mandir@/man1/genbugs.1sr.gz
 elvi.1sr.gz @mandir@/man1/genportage.1sr.gz
+elvi.1sr.gz @mandir@/man1/github.1sr.gz
 elvi.1sr.gz @mandir@/man1/google.1sr.gz
 elvi.1sr.gz @mandir@/man1/gutenberg.1sr.gz
 elvi.1sr.gz @mandir@/man1/happypenguin.1sr.gz
